--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_URI = mongodb+srv://djsmacker01:Fabulous01**@cluster0.ekkid5s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+GOOGLE_CLIENT_ID = 73711471340-ithb1mdp4gekknkouarmc2ehlh9kuqoq.apps.googleusercontent.com
+GOOGLE_SECRET_KEY = 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
